docs(backend): enrich JavaDoc for AI, controllers, and services