@@ -2,137 +2,104 @@ package com.mamoji.controller;
 
 import com.mamoji.common.PermissionConstants;
 import com.mamoji.common.RoleConstants;
+import com.mamoji.common.api.ApiResponses;
+import com.mamoji.common.exception.ResourceNotFoundException;
 import com.mamoji.entity.User;
 import com.mamoji.repository.UserRepository;
 import com.mamoji.security.AuthenticationUser;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.crypto.password.PasswordEncoder;
-import org.springframework.web.bind.annotation.*;
+import org.springframework.web.bind.annotation.DeleteMapping;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.PutMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
 
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
+/**
+ * Admin-only user management endpoints.
+ */
 @RestController
 @RequestMapping("/api/v1/admin/users")
 @RequiredArgsConstructor
 public class AdminUserController {
 
+    private static final int FORBIDDEN_CODE = 1003;
+
     private final UserRepository userRepository;
     private final PasswordEncoder passwordEncoder;
 
-    // Helper method to check if user has permission
-    private boolean hasPermission(User user, int permission) {
-        // Admin role always has all permissions
-        if (RoleConstants.isAdmin(user.getRole())) {
-            return true;
-        }
-        return PermissionConstants.hasPermission(user.getPermissions(), permission);
-    }
-
+    /**
+     * Lists all users for admin console.
+     */
     @GetMapping
     public ResponseEntity<Map<String, Object>> getUsers(@AuthenticationUser User currentUser) {
-        // Only admin can list users
         if (!RoleConstants.isAdmin(currentUser.getRole())) {
-            Map<String, Object> error = new HashMap<>();
-            error.put("code", 1003);
-            error.put("message", "无权限访问");
-            error.put("data", null);
-            return ResponseEntity.status(403).body(error);
+            return ApiResponses.forbidden(FORBIDDEN_CODE, "无权限访问。");
         }
 
-        List<User> users = userRepository.findAll();
-        List<Map<String, Object>> userList = users.stream()
-            .map(u -> {
-                Map<String, Object> map = new HashMap<>();
-                map.put("id", u.getId());
-                map.put("email", u.getEmail());
-                map.put("nickname", u.getNickname());
-                map.put("role", u.getRole() != null ? u.getRole() : RoleConstants.USER);
-                map.put("roleName", RoleConstants.getRoleName(u.getRole() != null ? u.getRole() : RoleConstants.USER));
-                map.put("permissions", u.getPermissions() != null ? u.getPermissions() : PermissionConstants.DEFAULT_USER_PERMISSIONS);
-                map.put("permissionsName", PermissionConstants.getPermissionNames(u.getPermissions() != null ? u.getPermissions() : PermissionConstants.DEFAULT_USER_PERMISSIONS));
-                map.put("familyId", u.getFamilyId() != null ? u.getFamilyId() : 0);
-                return map;
-            })
-            .collect(Collectors.toList());
-
-        Map<String, Object> result = new HashMap<>();
-        result.put("code", 0);
-        result.put("message", "success");
-        result.put("data", userList);
-
-        return ResponseEntity.ok(result);
+        List<Map<String, Object>> userList = userRepository.findAll()
+            .stream()
+            .map(this::toUserMap)
+            .toList();
+        return ApiResponses.ok(userList);
     }
 
+    /**
+     * Creates one user account with role/permission assignment.
+     */
     @PostMapping
-    public ResponseEntity<Map<String, Object>> createUser(@AuthenticationUser User currentUser, @RequestBody Map<String, String> request) {
-        // Only admin can create users
+    public ResponseEntity<Map<String, Object>> createUser(
+        @AuthenticationUser User currentUser,
+        @RequestBody Map<String, String> request
+    ) {
         if (!RoleConstants.isAdmin(currentUser.getRole())) {
-            Map<String, Object> error = new HashMap<>();
-            error.put("code", 1003);
-            error.put("message", "无权限访问");
-            error.put("data", null);
-            return ResponseEntity.status(403).body(error);
+            return ApiResponses.forbidden(FORBIDDEN_CODE, "无权限访问。");
         }
 
         String email = request.get("email");
-        String password = request.get("password");
-        String nickname = request.get("nickname");
-        Integer role = request.get("role") != null ? Integer.parseInt(request.get("role")) : RoleConstants.USER;
-        Integer permissions = request.get("permissions") != null ? Integer.parseInt(request.get("permissions")) : PermissionConstants.DEFAULT_USER_PERMISSIONS;
-
         if (userRepository.existsByEmail(email)) {
-            Map<String, Object> error = new HashMap<>();
-            error.put("code", 2002);
-            error.put("message", "邮箱已被注册");
-            error.put("data", null);
-            return ResponseEntity.badRequest().body(error);
+            return ApiResponses.badRequest(2002, "邮箱已被注册。");
         }
+
+        Integer role = request.get("role") != null ? Integer.parseInt(request.get("role")) : RoleConstants.USER;
+        Integer permissions = request.get("permissions") != null
+            ? Integer.parseInt(request.get("permissions"))
+            : PermissionConstants.DEFAULT_USER_PERMISSIONS;
 
         User user = User.builder()
             .email(email)
-            .passwordHash(passwordEncoder.encode(password))
-            .nickname(nickname)
+            .passwordHash(passwordEncoder.encode(request.get("password")))
+            .nickname(request.get("nickname"))
             .role(role)
             .permissions(permissions)
             .familyId(currentUser.getFamilyId())
             .build();
 
-        user = userRepository.save(user);
-
-        Map<String, Object> data = new HashMap<>();
-        data.put("id", user.getId());
-        data.put("email", user.getEmail());
-        data.put("nickname", user.getNickname());
-        data.put("role", user.getRole());
-        data.put("roleName", RoleConstants.getRoleName(user.getRole()));
-        data.put("permissions", user.getPermissions());
-        data.put("permissionsName", PermissionConstants.getPermissionNames(user.getPermissions()));
-
-        Map<String, Object> result = new HashMap<>();
-        result.put("code", 0);
-        result.put("message", "success");
-        result.put("data", data);
-
-        return ResponseEntity.ok(result);
+        return ApiResponses.ok(toUserMap(userRepository.save(user)));
     }
 
+    /**
+     * Updates user profile/role/permissions/password.
+     */
     @PutMapping("/{id}")
-    public ResponseEntity<Map<String, Object>> updateUser(@AuthenticationUser User currentUser, @PathVariable Long id, @RequestBody Map<String, Object> request) {
-        // Only admin can update users
+    public ResponseEntity<Map<String, Object>> updateUser(
+        @AuthenticationUser User currentUser,
+        @PathVariable Long id,
+        @RequestBody Map<String, Object> request
+    ) {
         if (!RoleConstants.isAdmin(currentUser.getRole())) {
-            Map<String, Object> error = new HashMap<>();
-            error.put("code", 1003);
-            error.put("message", "无权限访问");
-            error.put("data", null);
-            return ResponseEntity.status(403).body(error);
+            return ApiResponses.forbidden(FORBIDDEN_CODE, "无权限访问。");
         }
 
         User user = userRepository.findById(id)
-            .orElseThrow(() -> new RuntimeException("用户不存在"));
+            .orElseThrow(() -> new ResourceNotFoundException("用户不存在。"));
 
         if (request.get("nickname") != null) {
             user.setNickname(request.get("nickname").toString());
@@ -147,55 +114,42 @@ public class AdminUserController {
             user.setPasswordHash(passwordEncoder.encode(request.get("password").toString()));
         }
 
-        user = userRepository.save(user);
-
-        Map<String, Object> data = new HashMap<>();
-        data.put("id", user.getId());
-        data.put("email", user.getEmail());
-        data.put("nickname", user.getNickname());
-        data.put("role", user.getRole());
-        data.put("roleName", RoleConstants.getRoleName(user.getRole()));
-        data.put("permissions", user.getPermissions());
-        data.put("permissionsName", PermissionConstants.getPermissionNames(user.getPermissions()));
-
-        Map<String, Object> result = new HashMap<>();
-        result.put("code", 0);
-        result.put("message", "success");
-        result.put("data", data);
-
-        return ResponseEntity.ok(result);
+        return ApiResponses.ok(toUserMap(userRepository.save(user)));
     }
 
+    /**
+     * Deletes one user account (except self-delete).
+     */
     @DeleteMapping("/{id}")
     public ResponseEntity<Map<String, Object>> deleteUser(@AuthenticationUser User currentUser, @PathVariable Long id) {
-        // Only admin can delete users
         if (!RoleConstants.isAdmin(currentUser.getRole())) {
-            Map<String, Object> error = new HashMap<>();
-            error.put("code", 1003);
-            error.put("message", "无权限访问");
-            error.put("data", null);
-            return ResponseEntity.status(403).body(error);
+            return ApiResponses.forbidden(FORBIDDEN_CODE, "无权限访问。");
         }
-
-        // Cannot delete yourself
         if (currentUser.getId().equals(id)) {
-            Map<String, Object> error = new HashMap<>();
-            error.put("code", 1004);
-            error.put("message", "不能删除自己的账户");
-            error.put("data", null);
-            return ResponseEntity.badRequest().body(error);
+            return ApiResponses.badRequest(1004, "不能删除自己的账号。");
         }
 
         User user = userRepository.findById(id)
-            .orElseThrow(() -> new RuntimeException("用户不存在"));
-
+            .orElseThrow(() -> new ResourceNotFoundException("用户不存在。"));
         userRepository.delete(user);
+        return ApiResponses.ok(null);
+    }
 
-        Map<String, Object> result = new HashMap<>();
-        result.put("code", 0);
-        result.put("message", "success");
-        result.put("data", null);
-
-        return ResponseEntity.ok(result);
+    /**
+     * Maps user entity to admin response payload.
+     */
+    private Map<String, Object> toUserMap(User user) {
+        int role = user.getRole() != null ? user.getRole() : RoleConstants.USER;
+        int permissions = user.getPermissions() != null ? user.getPermissions() : PermissionConstants.DEFAULT_USER_PERMISSIONS;
+        return Map.of(
+            "id", user.getId(),
+            "email", user.getEmail(),
+            "nickname", user.getNickname(),
+            "role", role,
+            "roleName", RoleConstants.getRoleName(role),
+            "permissions", permissions,
+            "permissionsName", PermissionConstants.getPermissionNames(permissions),
+            "familyId", user.getFamilyId() != null ? user.getFamilyId() : 0
+        );
     }
 }
